[project]
name = "desafio-spark"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Figueiredo",email = "samuel.lobo2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=4.0.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "desafio_spark", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
